--- a/Michael-Beltz.html
+++ b/Michael-Beltz.html
@@ -47,7 +47,7 @@
   <body class="u-body"><header class="u-clearfix u-grey-80 u-header u-header" id="sec-8032"><div class="u-clearfix u-sheet u-sheet-1">
         <nav class="u-menu u-menu-dropdown u-menu-open-right u-offcanvas u-menu-1" data-responsive-from="XL">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
-            <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
+            <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-body-alt-color u-text-hover-palette-2-base" href="#">
               <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use></svg>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><defs><symbol id="menu-hamburger" viewBox="0 0 16 16" style="width: 16px; height: 16px;"><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
 </symbol>
@@ -65,7 +65,7 @@
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
-            <div class="u-container-style u-grey-80 u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
+            <div class="u-container-style u-grey-80 u-inner-container-layout u-sidenav">
               <div class="u-sidenav-overflow">
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#carousel_d6a0" style="padding: 10px 20px;">About Michael</a>
@@ -84,7 +84,7 @@
       </div></header>
     <section class="u-align-center u-clearfix u-section-1" id="carousel_d6a0">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <div alt="" class="u-image u-image-circle u-image-1"></div>
+        <div alt="A professional picture of Michael&amp;apos;s face." class="u-image u-image-circle u-image-1"></div>
         <h2 class="u-text u-text-1">About Michael</h2>
         <p class="u-align-center u-text u-text-2">Michael is a determined worker and leader that knows the importance of communication and teamwork.&nbsp;<br>
           <br>He has a diverse skillset including fluency in front and back end programming languages, in-depth experience with UI Design and web development, and a passion for cryptography and cybersecurity.<br>
