--- a/index.html
+++ b/index.html
@@ -357,8 +357,9 @@
     </section>
     
     
-    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-7273"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">Created and Designed by Michael</p>
+    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-7273"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+        <p class="u-small-text u-text u-text-variant u-text-1">Created and Designed by Michael<br>michael.beltz@columbia.edu
+        </p>
       </div></footer>
   </body>
 </html>
