--- a/Michael-Beltz.html
+++ b/Michael-Beltz.html
@@ -232,13 +232,15 @@
       <div class="u-clearfix u-sheet u-sheet-1">
         <h3 class="u-text u-text-1">Columbia Queer Alliance: Treasurer&nbsp;</h3>
         <ul class="u-custom-list u-text u-text-2">
-          <li style="">Managed and planned budget for events, partnerships, and sponsorships</li>
-          <li style="">
+          <li>
             <div class="u-list-icon">
-              <div xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content">-</div>
-            </div>Distributed money to other LGBTQ+ clubs on campus&nbsp;<div class="u-list-icon">
               <div>-</div>
-            </div>
+            </div>Managed and planned budget for events, partnerships, and sponsorships
+          </li>
+          <li>
+            <div class="u-list-icon">
+              <div>-</div>
+            </div>Distributed money to other LGBTQ+ clubs on campus
           </li>
         </ul>
       </div>
